# PriceWatcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pricewatcher.db  pyproject.toml  requirements.txt
src/app/: __init__.py  __main__.py  config.py  core.py  database.py  models.py  services.py
src/app/models/: __init__.py  alert.py  product.py
src/app/parsers/: __init__.py  hardgamers_parser.py
src/app/repositories/: __init__.py  alert_repository.py  product_repository.py
src/app/services/: __init__.py  alert_service.py  product_service.py
src/price_watcher/: __init__.py  __main__.py  config.py  core.py  models.py  services.py
